# LLM-Runner

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CODEX.md  README.md  SKILLS.md
config_files/: llmrunner.json.in
config_files/model_configuration_files/: executorchTextConfig-llama-3.2-1B.json  llamaTextConfig-llama-3.2-1B.json  llamaTextConfig-phi-2.json  llamaVisionConfig-qwen2-vl-2B.json  mnnTextConfig-llama-3.2-1B.json  mnnVisionConfig-qwen2.5-3B.json  onnxrtTextConfig-llama-3.2-1B.json  onnxrtTextConfig-phi-4.json
docs/: architecture.md  benchmarking.md  integration.md
model_configuration_files/: LLMUserConfig.txt  executorchTextConfig-llama-3.2-1B.json  executorchTextConfig-stub.json  llamaConfig.txt  llamaTextConfig-llama-3.2-1B.json  llamaTextConfig-phi-2.json  llamaTextConfig.json  llamaVisionConfig.json  mediapipeConfig.json  mediapipeTextConfig-gemma-2B.json  mnnTextConfig-llama-3.2-1B.json  mnnVisionConfig-qwen2.5-3B.json  mnnVisionConfig-qwen3.5-2B.json  onnxrtTextConfig-llama-3.2-1B.json  onnxrtTextConfig.json
scripts/cmake/: bazel-build.cmake  check-flag.cmake  configuration-options.cmake  configuration-presets.json  download-resources.cmake  find-catch.cmake  find_is_utf8.cmake  python-deps.cmake
scripts/cmake/toolchains/: aarch64-base.cmake  base.cmake  native-base.cmake  x-android-aarch64.cmake  x-linux-aarch64.cmake
scripts/dev/: collect_debug_bundle.sh  llm_doctor.py
scripts/py/: build_mediapipe.py  download_resources.py  mediapipe-config.json  mediapipe-update.patch  requirements.json
scripts/py/toolchain/: BUILD  cc_toolchain_config.bzl
skills/llm-add-model-config/: SKILL.md
skills/llm-add-model-config/references/: model-config-checklist.md
skills/llm-add-model-config/scripts/: assert_config_listed.sh
skills/llm-add-model-support/: SKILL.md
skills/llm-add-model-support/references/: output-validation.md
skills/llm-add-model-support/scripts/: assert_config_listed.sh  sha256_file.sh
skills/llm-backend-scaffold/: SKILL.md
skills/llm-benchmark-workflow/: SKILL.md
skills/llm-benchmark-workflow/references/: bench-notes.md
skills/llm-benchmark-workflow/scripts/: bench_smoke.sh
skills/llm-build-and-ctest/: SKILL.md
skills/llm-build-and-ctest/scripts/: run_build_and_ctest.sh
skills/llm-change-api-safely/: SKILL.md
skills/llm-change-api-safely/references/: api-change-checklist.md
skills/llm-dev-doctor/: SKILL.md
skills/llm-dev-doctor/scripts/: doctor.sh
skills/llm-framework-version-tracker/: SKILL.md
skills/llm-framework-version-tracker/references/: upgrade-triage.md
skills/llm-framework-version-tracker/scripts/: framework_versions.sh
skills/llm-session-start/: SKILL.md
skills/llm-session-start/references/: wrapper-alias.md
skills/llm-session-start/scripts/: start.sh
src/: CMakeLists.txt
src/cpp/: CMakeLists.txt  Llm.cpp  LlmCache.cpp  LlmCache.hpp  LlmJni.cpp
src/cpp/benchmark/: BenchRunner.cpp  BenchRunner.hpp  CMakeLists.txt  LlmBench.cpp  LlmBench.hpp  LlmBenchmark.cpp  LlmBenchmark.hpp  main.cpp
src/cpp/chat/: CMakeLists.txt  LlmChat.cpp  LlmChat.hpp  intro.md
src/cpp/config/: CMakeLists.txt  LlmConfig.cpp  LlmConfig.hpp  README.md
src/cpp/frameworks/: CMakeLists.txt  LlmFactory.cpp  LlmFactory.hpp  README.md  intro.md
src/cpp/frameworks/executorch/: CMakeLists.txt  ExecuTorchImpl.cpp  LlmFactory.cpp  LlmImpl.hpp
src/cpp/frameworks/llama_cpp/: CMakeLists.txt  LlamaImpl.cpp  LlamaTextImpl.cpp  LlamaTextImpl.hpp  LlamaVisionImpl.cpp  LlamaVisionImpl.hpp  LlmFactory.cpp  LlmImpl.hpp
src/cpp/frameworks/mediapipe/: CMakeLists.txt  LlmFactory.cpp  LlmImpl.hpp  MediaPipeImpl.cpp
src/cpp/frameworks/mnn/: CMakeLists.txt  LlmFactory.cpp  LlmFactory.hpp  LlmImpl.hpp  MnnImpl.cpp
src/cpp/frameworks/onnxruntime_genai/: CMakeLists.txt  LlmImpl.hpp  OnnxrtImpl.cpp
src/cpp/interface/: CMakeLists.txt  Llm.hpp  LlmBridge.hpp  LlmImpl.hpp
src/cpp/llama_cpp/: CMakeLists.txt
src/cpp/llama_cpp/include/: LlamaImpl.hpp
src/cpp/llama_cpp/jni/: Llama.cpp
src/cpp/log/: BuildInfo.cpp  BuildInfo.hpp  CMakeLists.txt  LlmBuildInfoConfig.hpp.in  Logger.hpp
src/java/: CMakeLists.txt
src/java/com/arm/: Llm.java  LlmConfig.java
test/: CMakeLists.txt
test/cpp/: BenchRunnerTest.cpp  LlmConfigTest.cpp  LlmLogTest.cpp  LlmSwitchEndToEndTest.cpp  LlmTest.cpp  LlmUtils.cpp  LlmUtils.hpp
test/java/com/arm/: LlmTestJNI.java
